--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "angular": "^1.6.8",
     "angular-sanitize": "^1.6.8",
     "bootstrap": "^4.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
