--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.13",
     "angular": "^1.6.8",
+    "angular-locale-pt-br": "^1.3.16",
     "angular-sanitize": "^1.6.8",
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
